# django-tasks-gcp

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: pypi-release.yml  pypi-test.yml  test.yml
example/: .gitignore
example/core/: settings.py  urls.py
example/example/: tasks.py  tests.py
src/django_tasks_gcp/: authn.py  backend.py  results.py  urls.py  utils.py  views.py
tests/: settings.py
tests/django_tasks_gcp/: test_authn.py  test_backend.py  test_views.py  utils.py
