[project]
name = "django-tasks-gcp"
version = "0.1.0"
description = "A backend for Django’s built-in Tasks framework powered by Google Cloud Tasks."
readme = "README.md"
authors = [
    { name = "Chris Muthig", email = "chris@camuthig.dev" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.14"
dependencies = [
    "django>=6.0a1,<7.0",
    "google-cloud-tasks>=2.19.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
]


[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.ruff]

line-length = 128
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
extend-select = [
    "I",  # isort
    "TID252",  # prefer using absolute over relative imports
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
